parser/moon_parser_bison.output
Terminals unused in grammar

   ERROR
   VOID
   UMINUS


Grammar

    0 $accept: moon $end

    1 moon: moon_body1 END_P

    2 moon_body1: moon_stmts1

    3 moon_stmts1: moon_stmt1
    4            | moon_stmt1 moon_stmts1

    5 moon_stmt1: declare_variable_stmt ';'
    6           | declare_type_stmt ';'
    7           | declare_function_stmt

    8 moon_body: %empty
    9          | moon_stmts

   10 moon_stmts: moon_stmt
   11           | moon_stmt moon_stmts

   12 moon_stmt: declare_variable_stmt ';'
   13          | if_stmt
   14          | while_stmt
   15          | expression ';'
   16          | return_stmt ';'
   17          | break_stmt ';'

   18 declare_variable_stmt: type IDENTIFIER
   19                      | type IDENTIFIER '=' expression

   20 struct_elem_list: type IDENTIFIER ';'
   21                 | type IDENTIFIER ';' struct_elem_list

   22 declare_type_stmt: TYPEDEF type IDENTIFIER
   23                  | STRUCT IDENTIFIER '{' struct_elem_list '}'

   24 type_fields: type_field
   25            | type_field ',' type_fields

   26 declare_function_stmt: type IDENTIFIER '(' type_fields ')' '{' moon_body '}'
   27                      | type IDENTIFIER '(' ')' '{' moon_body '}'

   28 if_stmt: IF '(' expression ')' '{' moon_body '}'
   29        | IF '(' expression ')' '{' moon_body '}' ELSE '{' moon_body '}'

   30 while_stmt: WHILE '(' expression ')' '{' moon_body '}'

   31 return_stmt: RETURN
   32            | RETURN expression

   33 break_stmt: BREAK

   34 left_value: IDENTIFIER
   35           | left_value '.' IDENTIFIER
   36           | left_value '[' expression ']'

   37 type_field: type IDENTIFIER

   38 type: IDENTIFIER
   39     | INT
   40     | STRING_
   41     | left_value '[' ']'
   42     | INT '[' ']'

   43 expression: INTNUM
   44           | NIL
   45           | TRUE
   46           | FALSE
   47           | STRING
   48           | left_value
   49           | IDENTIFIER '(' expression_list ')'
   50           | IDENTIFIER '(' ')'
   51           | left_value '=' expression
   52           | MINUS expression
   53           | expression OR expression
   54           | expression AND expression
   55           | expression LT expression
   56           | expression GT expression
   57           | expression LE expression
   58           | expression GE expression
   59           | expression PLUS expression
   60           | expression MINUS expression
   61           | expression TIMES expression
   62           | expression DIVIDE expression
   63           | expression EQ expression
   64           | expression NEQ expression
   65           | type '{' expression_list '}'
   66           | '(' expression ')'

   67 expression_list: expression
   68                | expression ',' expression_list


Terminals, with rules where they appear

$end (0) 0
'(' (40) 26 27 28 29 30 49 50 66
')' (41) 26 27 28 29 30 49 50 66
',' (44) 25 68
'.' (46) 35
';' (59) 5 6 12 15 16 17 20 21
'=' (61) 19 51
'[' (91) 36 41 42
']' (93) 36 41 42
'{' (123) 23 26 27 28 29 30 65
'}' (125) 23 26 27 28 29 30 65
error (256)
IDENTIFIER (258) 18 19 20 21 22 23 26 27 34 35 37 38 49 50
INTNUM (259) 43
STRING (260) 47
BREAK (261) 33
ELSE (262) 29
END_P (263) 1
ERROR (264)
FALSE (265) 46
IF (266) 28 29
INT (267) 39 42
NIL (268) 44
RETURN (269) 31 32
STRING_ (270) 40
STRUCT (271) 23
TRUE (272) 45
TYPEDEF (273) 22
VOID (274)
WHILE (275) 30
OR (276) 53
AND (277) 54
EQ (278) 63
NEQ (279) 64
LE (280) 57
LT (281) 55
GT (282) 56
GE (283) 58
PLUS (284) 59
MINUS (285) 52 60
TIMES (286) 61
DIVIDE (287) 62
UMINUS (288)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
moon (45)
    on left: 1, on right: 0
moon_body1 (46)
    on left: 2, on right: 1
moon_stmts1 (47)
    on left: 3 4, on right: 2 4
moon_stmt1 (48)
    on left: 5 6 7, on right: 3 4
moon_body (49)
    on left: 8 9, on right: 26 27 28 29 30
moon_stmts (50)
    on left: 10 11, on right: 9 11
moon_stmt (51)
    on left: 12 13 14 15 16 17, on right: 10 11
declare_variable_stmt (52)
    on left: 18 19, on right: 5 12
struct_elem_list (53)
    on left: 20 21, on right: 21 23
declare_type_stmt (54)
    on left: 22 23, on right: 6
type_fields (55)
    on left: 24 25, on right: 25 26
declare_function_stmt (56)
    on left: 26 27, on right: 7
if_stmt (57)
    on left: 28 29, on right: 13
while_stmt (58)
    on left: 30, on right: 14
return_stmt (59)
    on left: 31 32, on right: 16
break_stmt (60)
    on left: 33, on right: 17
left_value (61)
    on left: 34 35 36, on right: 35 36 41 48 51
type_field (62)
    on left: 37, on right: 24 25
type (63)
    on left: 38 39 40 41 42, on right: 18 19 20 21 22 26 27 37 65
expression (64)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65 66, on right: 15 19 28 29 30 32 36 51 52 53 54 55
    56 57 58 59 60 61 62 63 64 66 67 68
expression_list (65)
    on left: 67 68, on right: 49 65 68


State 0

    0 $accept: . moon $end
    1 moon: . moon_body1 END_P
    2 moon_body1: . moon_stmts1
    3 moon_stmts1: . moon_stmt1
    4            | . moon_stmt1 moon_stmts1
    5 moon_stmt1: . declare_variable_stmt ';'
    6           | . declare_type_stmt ';'
    7           | . declare_function_stmt
   18 declare_variable_stmt: . type IDENTIFIER
   19                      | . type IDENTIFIER '=' expression
   22 declare_type_stmt: . TYPEDEF type IDENTIFIER
   23                  | . STRUCT IDENTIFIER '{' struct_elem_list '}'
   26 declare_function_stmt: . type IDENTIFIER '(' type_fields ')' '{' moon_body '}'
   27                      | . type IDENTIFIER '(' ')' '{' moon_body '}'
   34 left_value: . IDENTIFIER
   35           | . left_value '.' IDENTIFIER
   36           | . left_value '[' expression ']'
   38 type: . IDENTIFIER
   39     | . INT
   40     | . STRING_
   41     | . left_value '[' ']'
   42     | . INT '[' ']'

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    STRING_     shift, and go to state 3
    STRUCT      shift, and go to state 4
    TYPEDEF     shift, and go to state 5

    moon                   go to state 6
    moon_body1             go to state 7
    moon_stmts1            go to state 8
    moon_stmt1             go to state 9
    declare_variable_stmt  go to state 10
    declare_type_stmt      go to state 11
    declare_function_stmt  go to state 12
    left_value             go to state 13
    type                   go to state 14


State 1

   34 left_value: IDENTIFIER .  ['[', '.']
   38 type: IDENTIFIER .  [IDENTIFIER]

    IDENTIFIER  reduce using rule 38 (type)
    $default    reduce using rule 34 (left_value)


State 2

   39 type: INT .  [IDENTIFIER, '{']
   42     | INT . '[' ']'

    '['  shift, and go to state 15

    $default  reduce using rule 39 (type)


State 3

   40 type: STRING_ .

    $default  reduce using rule 40 (type)


State 4

   23 declare_type_stmt: STRUCT . IDENTIFIER '{' struct_elem_list '}'

    IDENTIFIER  shift, and go to state 16


State 5

   22 declare_type_stmt: TYPEDEF . type IDENTIFIER
   34 left_value: . IDENTIFIER
   35           | . left_value '.' IDENTIFIER
   36           | . left_value '[' expression ']'
   38 type: . IDENTIFIER
   39     | . INT
   40     | . STRING_
   41     | . left_value '[' ']'
   42     | . INT '[' ']'

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    STRING_     shift, and go to state 3

    left_value  go to state 13
    type        go to state 17


State 6

    0 $accept: moon . $end

    $end  shift, and go to state 18


State 7

    1 moon: moon_body1 . END_P

    END_P  shift, and go to state 19


State 8

    2 moon_body1: moon_stmts1 .

    $default  reduce using rule 2 (moon_body1)


State 9

    3 moon_stmts1: . moon_stmt1
    3            | moon_stmt1 .  [END_P]
    4            | . moon_stmt1 moon_stmts1
    4            | moon_stmt1 . moon_stmts1
    5 moon_stmt1: . declare_variable_stmt ';'
    6           | . declare_type_stmt ';'
    7           | . declare_function_stmt
   18 declare_variable_stmt: . type IDENTIFIER
   19                      | . type IDENTIFIER '=' expression
   22 declare_type_stmt: . TYPEDEF type IDENTIFIER
   23                  | . STRUCT IDENTIFIER '{' struct_elem_list '}'
   26 declare_function_stmt: . type IDENTIFIER '(' type_fields ')' '{' moon_body '}'
   27                      | . type IDENTIFIER '(' ')' '{' moon_body '}'
   34 left_value: . IDENTIFIER
   35           | . left_value '.' IDENTIFIER
   36           | . left_value '[' expression ']'
   38 type: . IDENTIFIER
   39     | . INT
   40     | . STRING_
   41     | . left_value '[' ']'
   42     | . INT '[' ']'

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    STRING_     shift, and go to state 3
    STRUCT      shift, and go to state 4
    TYPEDEF     shift, and go to state 5

    $default  reduce using rule 3 (moon_stmts1)

    moon_stmts1            go to state 20
    moon_stmt1             go to state 9
    declare_variable_stmt  go to state 10
    declare_type_stmt      go to state 11
    declare_function_stmt  go to state 12
    left_value             go to state 13
    type                   go to state 14


State 10

    5 moon_stmt1: declare_variable_stmt . ';'

    ';'  shift, and go to state 21


State 11

    6 moon_stmt1: declare_type_stmt . ';'

    ';'  shift, and go to state 22


State 12

    7 moon_stmt1: declare_function_stmt .

    $default  reduce using rule 7 (moon_stmt1)


State 13

   35 left_value: left_value . '.' IDENTIFIER
   36           | left_value . '[' expression ']'
   41 type: left_value . '[' ']'

    '['  shift, and go to state 23
    '.'  shift, and go to state 24


State 14

   18 declare_variable_stmt: type . IDENTIFIER
   19                      | type . IDENTIFIER '=' expression
   26 declare_function_stmt: type . IDENTIFIER '(' type_fields ')' '{' moon_body '}'
   27                      | type . IDENTIFIER '(' ')' '{' moon_body '}'

    IDENTIFIER  shift, and go to state 25


State 15

   42 type: INT '[' . ']'

    ']'  shift, and go to state 26


State 16

   23 declare_type_stmt: STRUCT IDENTIFIER . '{' struct_elem_list '}'

    '{'  shift, and go to state 27


State 17

   22 declare_type_stmt: TYPEDEF type . IDENTIFIER

    IDENTIFIER  shift, and go to state 28


State 18

    0 $accept: moon $end .

    $default  accept


State 19

    1 moon: moon_body1 END_P .

    $default  reduce using rule 1 (moon)


State 20

    4 moon_stmts1: moon_stmt1 moon_stmts1 .

    $default  reduce using rule 4 (moon_stmts1)


State 21

    5 moon_stmt1: declare_variable_stmt ';' .

    $default  reduce using rule 5 (moon_stmt1)


State 22

    6 moon_stmt1: declare_type_stmt ';' .

    $default  reduce using rule 6 (moon_stmt1)


State 23

   34 left_value: . IDENTIFIER
   35           | . left_value '.' IDENTIFIER
   36           | . left_value '[' expression ']'
   36           | left_value '[' . expression ']'
   38 type: . IDENTIFIER
   39     | . INT
   40     | . STRING_
   41     | . left_value '[' ']'
   41     | left_value '[' . ']'
   42     | . INT '[' ']'
   43 expression: . INTNUM
   44           | . NIL
   45           | . TRUE
   46           | . FALSE
   47           | . STRING
   48           | . left_value
   49           | . IDENTIFIER '(' expression_list ')'
   50           | . IDENTIFIER '(' ')'
   51           | . left_value '=' expression
   52           | . MINUS expression
   53           | . expression OR expression
   54           | . expression AND expression
   55           | . expression LT expression
   56           | . expression GT expression
   57           | . expression LE expression
   58           | . expression GE expression
   59           | . expression PLUS expression
   60           | . expression MINUS expression
   61           | . expression TIMES expression
   62           | . expression DIVIDE expression
   63           | . expression EQ expression
   64           | . expression NEQ expression
   65           | . type '{' expression_list '}'
   66           | . '(' expression ')'

    IDENTIFIER  shift, and go to state 29
    INTNUM      shift, and go to state 30
    STRING      shift, and go to state 31
    FALSE       shift, and go to state 32
    INT         shift, and go to state 2
    NIL         shift, and go to state 33
    STRING_     shift, and go to state 3
    TRUE        shift, and go to state 34
    MINUS       shift, and go to state 35
    '('         shift, and go to state 36
    ']'         shift, and go to state 37

    left_value  go to state 38
    type        go to state 39
    expression  go to state 40


State 24

   35 left_value: left_value '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 41


State 25

   18 declare_variable_stmt: type IDENTIFIER .  [';']
   19                      | type IDENTIFIER . '=' expression
   26 declare_function_stmt: type IDENTIFIER . '(' type_fields ')' '{' moon_body '}'
   27                      | type IDENTIFIER . '(' ')' '{' moon_body '}'

    '='  shift, and go to state 42
    '('  shift, and go to state 43

    $default  reduce using rule 18 (declare_variable_stmt)


State 26

   42 type: INT '[' ']' .

    $default  reduce using rule 42 (type)


State 27

   20 struct_elem_list: . type IDENTIFIER ';'
   21                 | . type IDENTIFIER ';' struct_elem_list
   23 declare_type_stmt: STRUCT IDENTIFIER '{' . struct_elem_list '}'
   34 left_value: . IDENTIFIER
   35           | . left_value '.' IDENTIFIER
   36           | . left_value '[' expression ']'
   38 type: . IDENTIFIER
   39     | . INT
   40     | . STRING_
   41     | . left_value '[' ']'
   42     | . INT '[' ']'

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    STRING_     shift, and go to state 3

    struct_elem_list  go to state 44
    left_value        go to state 13
    type              go to state 45


State 28

   22 declare_type_stmt: TYPEDEF type IDENTIFIER .

    $default  reduce using rule 22 (declare_type_stmt)


State 29

   34 left_value: IDENTIFIER .  ['[', '=', OR, AND, EQ, NEQ, LE, LT, GT, GE, PLUS, MINUS, TIMES, DIVIDE, ';', '}', ',', ')', '.', ']']
   38 type: IDENTIFIER .  [IDENTIFIER, '{']
   49 expression: IDENTIFIER . '(' expression_list ')'
   50           | IDENTIFIER . '(' ')'

    '('  shift, and go to state 46

    IDENTIFIER  reduce using rule 38 (type)
    '{'         reduce using rule 38 (type)
    $default    reduce using rule 34 (left_value)


State 30

   43 expression: INTNUM .

    $default  reduce using rule 43 (expression)


State 31

   47 expression: STRING .

    $default  reduce using rule 47 (expression)


State 32

   46 expression: FALSE .

    $default  reduce using rule 46 (expression)


State 33

   44 expression: NIL .

    $default  reduce using rule 44 (expression)


State 34

   45 expression: TRUE .

    $default  reduce using rule 45 (expression)


State 35

   34 left_value: . IDENTIFIER
   35           | . left_value '.' IDENTIFIER
   36           | . left_value '[' expression ']'
   38 type: . IDENTIFIER
   39     | . INT
   40     | . STRING_
   41     | . left_value '[' ']'
   42     | . INT '[' ']'
   43 expression: . INTNUM
   44           | . NIL
   45           | . TRUE
   46           | . FALSE
   47           | . STRING
   48           | . left_value
   49           | . IDENTIFIER '(' expression_list ')'
   50           | . IDENTIFIER '(' ')'
   51           | . left_value '=' expression
   52           | . MINUS expression
   52           | MINUS . expression
   53           | . expression OR expression
   54           | . expression AND expression
   55           | . expression LT expression
   56           | . expression GT expression
   57           | . expression LE expression
   58           | . expression GE expression
   59           | . expression PLUS expression
   60           | . expression MINUS expression
   61           | . expression TIMES expression
   62           | . expression DIVIDE expression
   63           | . expression EQ expression
   64           | . expression NEQ expression
   65           | . type '{' expression_list '}'
   66           | . '(' expression ')'

    IDENTIFIER  shift, and go to state 29
    INTNUM      shift, and go to state 30
    STRING      shift, and go to state 31
    FALSE       shift, and go to state 32
    INT         shift, and go to state 2
    NIL         shift, and go to state 33
    STRING_     shift, and go to state 3
    TRUE        shift, and go to state 34
    MINUS       shift, and go to state 35
    '('         shift, and go to state 36

    left_value  go to state 38
    type        go to state 39
    expression  go to state 47


State 36

   34 left_value: . IDENTIFIER
   35           | . left_value '.' IDENTIFIER
   36           | . left_value '[' expression ']'
   38 type: . IDENTIFIER
   39     | . INT
   40     | . STRING_
   41     | . left_value '[' ']'
   42     | . INT '[' ']'
   43 expression: . INTNUM
   44           | . NIL
   45           | . TRUE
   46           | . FALSE
   47           | . STRING
   48           | . left_value
   49           | . IDENTIFIER '(' expression_list ')'
   50           | . IDENTIFIER '(' ')'
   51           | . left_value '=' expression
   52           | . MINUS expression
   53           | . expression OR expression
   54           | . expression AND expression
   55           | . expression LT expression
   56           | . expression GT expression
   57           | . expression LE expression
   58           | . expression GE expression
   59           | . expression PLUS expression
   60           | . expression MINUS expression
   61           | . expression TIMES expression
   62           | . expression DIVIDE expression
   63           | . expression EQ expression
   64           | . expression NEQ expression
   65           | . type '{' expression_list '}'
   66           | . '(' expression ')'
   66           | '(' . expression ')'

    IDENTIFIER  shift, and go to state 29
    INTNUM      shift, and go to state 30
    STRING      shift, and go to state 31
    FALSE       shift, and go to state 32
    INT         shift, and go to state 2
    NIL         shift, and go to state 33
    STRING_     shift, and go to state 3
    TRUE        shift, and go to state 34
    MINUS       shift, and go to state 35
    '('         shift, and go to state 36

    left_value  go to state 38
    type        go to state 39
    expression  go to state 48


State 37

   41 type: left_value '[' ']' .

    $default  reduce using rule 41 (type)


State 38

   35 left_value: left_value . '.' IDENTIFIER
   36           | left_value . '[' expression ']'
   41 type: left_value . '[' ']'
   48 expression: left_value .  [OR, AND, EQ, NEQ, LE, LT, GT, GE, PLUS, MINUS, TIMES, DIVIDE, ';', '}', ',', ')', ']']
   51           | left_value . '=' expression

    '['  shift, and go to state 23
    '='  shift, and go to state 49
    '.'  shift, and go to state 24

    $default  reduce using rule 48 (expression)


State 39

   65 expression: type . '{' expression_list '}'

    '{'  shift, and go to state 50


State 40

   36 left_value: left_value '[' expression . ']'
   53 expression: expression . OR expression
   54           | expression . AND expression
   55           | expression . LT expression
   56           | expression . GT expression
   57           | expression . LE expression
   58           | expression . GE expression
   59           | expression . PLUS expression
   60           | expression . MINUS expression
   61           | expression . TIMES expression
   62           | expression . DIVIDE expression
   63           | expression . EQ expression
   64           | expression . NEQ expression

    OR      shift, and go to state 51
    AND     shift, and go to state 52
    EQ      shift, and go to state 53
    NEQ     shift, and go to state 54
    LE      shift, and go to state 55
    LT      shift, and go to state 56
    GT      shift, and go to state 57
    GE      shift, and go to state 58
    PLUS    shift, and go to state 59
    MINUS   shift, and go to state 60
    TIMES   shift, and go to state 61
    DIVIDE  shift, and go to state 62
    ']'     shift, and go to state 63


State 41

   35 left_value: left_value '.' IDENTIFIER .

    $default  reduce using rule 35 (left_value)


State 42

   19 declare_variable_stmt: type IDENTIFIER '=' . expression
   34 left_value: . IDENTIFIER
   35           | . left_value '.' IDENTIFIER
   36           | . left_value '[' expression ']'
   38 type: . IDENTIFIER
   39     | . INT
   40     | . STRING_
   41     | . left_value '[' ']'
   42     | . INT '[' ']'
   43 expression: . INTNUM
   44           | . NIL
   45           | . TRUE
   46           | . FALSE
   47           | . STRING
   48           | . left_value
   49           | . IDENTIFIER '(' expression_list ')'
   50           | . IDENTIFIER '(' ')'
   51           | . left_value '=' expression
   52           | . MINUS expression
   53           | . expression OR expression
   54           | . expression AND expression
   55           | . expression LT expression
   56           | . expression GT expression
   57           | . expression LE expression
   58           | . expression GE expression
   59           | . expression PLUS expression
   60           | . expression MINUS expression
   61           | . expression TIMES expression
   62           | . expression DIVIDE expression
   63           | . expression EQ expression
   64           | . expression NEQ expression
   65           | . type '{' expression_list '}'
   66           | . '(' expression ')'

    IDENTIFIER  shift, and go to state 29
    INTNUM      shift, and go to state 30
    STRING      shift, and go to state 31
    FALSE       shift, and go to state 32
    INT         shift, and go to state 2
    NIL         shift, and go to state 33
    STRING_     shift, and go to state 3
    TRUE        shift, and go to state 34
    MINUS       shift, and go to state 35
    '('         shift, and go to state 36

    left_value  go to state 38
    type        go to state 39
    expression  go to state 64


State 43

   24 type_fields: . type_field
   25            | . type_field ',' type_fields
   26 declare_function_stmt: type IDENTIFIER '(' . type_fields ')' '{' moon_body '}'
   27                      | type IDENTIFIER '(' . ')' '{' moon_body '}'
   34 left_value: . IDENTIFIER
   35           | . left_value '.' IDENTIFIER
   36           | . left_value '[' expression ']'
   37 type_field: . type IDENTIFIER
   38 type: . IDENTIFIER
   39     | . INT
   40     | . STRING_
   41     | . left_value '[' ']'
   42     | . INT '[' ']'

    IDENTIFIER  shift, and go to state 1
    INT         shift, and go to state 2
    STRING_     shift, and go to state 3
    ')'         shift, and go to state 65

    type_fields  go to state 66
    left_value   go to state 13
    type_field   go to state 67
    type         go to state 68


State 44

   23 declare_type_stmt: STRUCT IDENTIFIER '{' struct_elem_list . '}'

    '}'  shift, and go to state 69


State 45

   20 struct_elem_list: type . IDENTIFIER ';'
   21                 | type . IDENTIFIER ';' struct_elem_list

    IDENTIFIER  shift, and go to state 70


State 46

   34 left_value: . IDENTIFIER
   35           | . left_value '.' IDENTIFIER
   36           | . left_value '[' expression ']'
   38 type: . IDENTIFIER
   39     | . INT
   40     | . STRING_
   41     | . left_value '[' ']'
   42     | . INT '[' ']'
   43 expression: . INTNUM
   44           | . NIL
   45           | . TRUE
   46           | . FALSE
   47           | . STRING
   48           | . left_value
   49           | . IDENTIFIER '(' expression_list ')'
   49           | IDENTIFIER '(' . expression_list ')'
   50           | . IDENTIFIER '(' ')'
   50           | IDENTIFIER '(' . ')'
   51           | . left_value '=' expression
   52           | . MINUS expression
   53           | . expression OR expression
   54           | . expression AND expression
   55           | . expression LT expression
   56           | . expression GT expression
   57           | . expression LE expression
   58           | . expression GE expression
   59           | . expression PLUS expression
   60           | . expression MINUS expression
   61           | . expression TIMES expression
   62           | . expression DIVIDE expression
   63           | . expression EQ expression
   64           | . expression NEQ expression
   65           | . type '{' expression_list '}'
   66           | . '(' expression ')'
   67 expression_list: . expression
   68                | . expression ',' expression_list

    IDENTIFIER  shift, and go to state 29
    INTNUM      shift, and go to state 30
    STRING      shift, and go to state 31
    FALSE       shift, and go to state 32
    INT         shift, and go to state 2
    NIL         shift, and go to state 33
    STRING_     shift, and go to state 3
    TRUE        shift, and go to state 34
    MINUS       shift, and go to state 35
    '('         shift, and go to state 36
    ')'         shift, and go to state 71

    left_value       go to state 38
    type             go to state 39
    expression       go to state 72
    expression_list  go to state 73


State 47

   52 expression: MINUS expression .  [OR, AND, EQ, NEQ, LE, LT, GT, GE, PLUS, MINUS, ';', '}', ',', ')', ']']
   53           | expression . OR expression
   54           | expression . AND expression
   55           | expression . LT expression
   56           | expression . GT expression
   57           | expression . LE expression
   58           | expression . GE expression
   59           | expression . PLUS expression
   60           | expression . MINUS expression
   61           | expression . TIMES expression
   62           | expression . DIVIDE expression
   63           | expression . EQ expression
   64           | expression . NEQ expression

    TIMES   shift, and go to state 61
    DIVIDE  shift, and go to state 62

    $default  reduce using rule 52 (expression)
